fix: adjust jdk verstion 1.8(URLEncoder.encode)